add thread awareness

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -5,3 +5,4 @@ authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
 
 [dependencies]
 tock-regs = { path = "../tools/tock-register-interface" }
+memoffset = "0.2.1"
